--- a/app/i18n/locales/tr.json
+++ b/app/i18n/locales/tr.json
@@ -1672,6 +1672,10 @@
     "addProduct": {
       "title": "Yeni Ürün Ekle",
       "description": "Yeni bir ürün eklemek için formu doldurun",
+      "success": {
+        "title": "Ürün Başarıyla Eklendi",
+        "description": "Ürün başarıyla eklendi. Artık ürün listesinde görüntüleyebilirsiniz."
+      },
       "form": {
         "steps": {
           "manufacturer": "Üretici"
