--- a/app/i18n/locales/en.json
+++ b/app/i18n/locales/en.json
@@ -214,99 +214,188 @@
       }
     }
   },
-  "product": {
-    "details": {
-      "notAvailable": "DPP layout not available for this product type",
-      "basicInfo": {
-        "title": "Basic Information",
-        "manufacturer": "Manufacturer",
-        "category": "Category"
-      },
-      "materials": {
-        "title": "Materials",
-        "recyclable": "Recyclable",
-        "percentage": "Percentage"
-      },
-      "certifications": {
-        "title": "Certifications",
-        "issuedBy": "Issued By",
-        "validUntil": "Valid Until",
-        "status": {
-          "valid": "Valid",
-          "expired": "Expired",
-          "unknown": "Unknown"
-        }
-      },
-      "keyFeatures": {
-        "title": "Key Features"
-      },
-      "sustainability": {
-        "title": "Sustainability Metrics"
-      },
-      "hazards": {
-        "title": "Hazard Pictograms",
-        "health": "Health Hazard",
-        "corrosive": "Corrosive",
-        "warning": "Warning",
-        "explosive": "Explosive",
-        "environmental": "Environmental Hazard"
-      },
-      "safety": {
-        "title": "Safety Measures",
-        "measures": {
-          "careful": "Always carry the batteries carefully.",
-          "upright": "Always keep in the upright position.",
-          "ventilation": "Charge in a well-ventilated place.",
-          "water": "Do not add extra quantities of pure water. (Pure water level must not be more than 1.5 cm above the plates.)",
-          "goggles": "During battery maintenance (addition of water, cleaning, battery charge), absolutely wear protective goggles suitable with working conditions.",
-          "clothing": "In case of any possible acid splash risk, wear protective clothing."
-        }
-      },
-      "emergency": {
-        "title": "Emergency Procedures",
-        "procedures": {
-          "contact": "In case of contact with eyes or skin wash with plenty of water.",
-          "clothing": "Immediately remove contaminated clothing.",
-          "ingestion": "Ingestion: Drink plenty of water and milk. Consult a physician.",
-          "spill": "Spill: Wash small-spills with water.",
-          "gases": "Operating batteries emit highly flammable hydrogen and oxygen gases.",
-          "spark": "Do not smoke or avoid any sources and acts which may cause sparks near batteries which are being charged, operating on the vehicle, or stopped after a long operation period.",
-          "fire": "Keep fire away.",
-          "devices": "Use all devices with great care."
-        }
-      },
-      "storage": {
-        "title": "Storage Guidelines",
-        "general": {
-          "title": "General Storage",
-          "dry": "Always store in a dry and cool place in the upright position. (10°C to 25°C).",
-          "pallet": "Place batteries on a wood pallet for avoiding direct contact with concrete ground."
-        },
-        "charge": {
-          "title": "Charge Level Monitoring",
-          "sale": "Charge level of the battery must be greater than 12.6V before sale.",
-          "minimum": "During storage, the minimum voltage must be 12.4V.",
-          "damage": "For preventing permanent damage, unpack and charge at 16.1V and 1/20Cn current if voltage is low."
-        },
-        "installation": {
-          "title": "Installation Steps",
-          "verify": "Verify battery compatibility with vehicle manual",
-          "engine": "Ensure engine is switched off",
-          "remove": "Remove old battery (negative terminal first)",
-          "control": "Conduct short-circuit control",
-          "clean": "Clean battery compartment and terminals",
-          "install": "Install new battery (connect positive cable first)",
-          "check": "Check charge current compatibility"
-        }
-      }
-    }
-  },
   "products": {
     "title": "Certified Products",
     "description": "Explore our collection of certified sustainable products with verified Digital Product Passports.",
     "loading": "Loading products...",
     "verify": {
       "button": "Verify Product"
+    },
+    "details": {
+      "backToProducts": "Back to Products",
+      "basicInfo": {
+        "title": "Basic Information",
+        "productCode": "Product Code",
+        "productName": "Product Name",
+        "sku": "SKU",
+        "category": "Category",
+        "status": "Status",
+        "addedDate": "Added Date",
+        "manufacturer": "Manufacturer"
+      },
+      "certifications": {
+        "title": "Certifications",
+        "table": {
+          "name": "Certificate",
+          "issuedBy": "Issued By",
+          "validUntil": "Valid Until",
+          "status": "Status",
+          "document": "Document"
+        },
+        "status": {
+          "active": "Active",
+          "valid": "Valid",
+          "expired": "Expired",
+          "pending": "Pending",
+          "unknown": "Unknown"
+        },
+        "actions": {
+          "download": "Download"
+        }
+      },
+      "qr": {
+        "title": "Product QR Code",
+        "description": "Scan this QR code to verify product authenticity and access detailed information",
+        "instructions": "Use your smartphone camera or QR code reader app to scan",
+        "downloadButton": "Download QR Code",
+        "imageAlt": "Product Verification QR Code",
+        "productQRCode": "Product QR Code"
+      },
+      "sustainability": {
+        "title": "Sustainability",
+        "description": "View product sustainability metrics",
+        "progress": "Progress",
+        "badge": "{value}% Sustainability",
+        "metrics": {
+          "waterUsage": "Water Usage",
+          "carbonFootprint": "Carbon Footprint",
+          "energyConsumption": "Energy Consumption",
+          "recycledContent": "Recycled Content",
+          "low": "Low",
+          "medium": "Medium",
+          "high": "High",
+          "carbon-footprint": "Carbon Footprint",
+          "water-usage": "Water Usage",
+          "energy-consumption": "Energy Consumption",
+          "recycled-materials": "Recycled Materials",
+          "chemical-reduction": "Chemical Reduction",
+          "biodegradability": "Biodegradability",
+          "packaging": "Packaging",
+          "waste-reduction": "Waste Reduction",
+          "chemical-usage": "Chemical Usage",
+          "renewable-energy": "Renewable Energy",
+          "water-saving": "Water Saving"
+        }
+      },
+      "battery": {
+        "features": {
+          "0": "Advanced lithium-ion technology for optimal performance",
+          "1": "Built-in safety features and protection circuits",
+          "2": "Extended cycle life and reliable power output"
+        },
+        "healthAndSafety": {
+          "title": "Health and Safety Measures",
+          "measures": {
+            "0": "Always handle batteries with care",
+            "1": "Keep in upright position at all times",
+            "2": "Charge in a well-ventilated area",
+            "3": "Do not add pure water (Pure water level should be 1.5 cm above plates)",
+            "4": "Always wear protective goggles suitable for working conditions during battery maintenance (adding water, cleaning, charging)",
+            "5": "Wear protective clothing if there is a risk of acid splashing"
+          }
+        },
+        "storage": {
+          "title": "Storage and Installation Guidelines",
+          "sections": {
+            "general": "General Storage",
+            "chargeLevel": "Charge Level Monitoring",
+            "installation": "Installation Steps",
+            "items": {
+              "general": {
+                "0": "Always store upright in a dry and cool place (10°C - 25°C)",
+                "1": "Place batteries on wooden pallets to avoid direct contact with concrete floor"
+              },
+              "chargeLevel": {
+                "0": "Pre-sale battery charge level should be above 12.6V",
+                "1": "Minimum voltage during storage should be 12.4V",
+                "2": "If voltage is low, open package and charge at 16.1V and 1/20Cn current to prevent permanent damage"
+              },
+              "installation": {
+                "0": "Verify battery compatibility from vehicle manual",
+                "1": "Ensure engine is off",
+                "2": "Remove old battery (negative terminal first)",
+                "3": "Check for short circuits",
+                "4": "Clean battery compartment and terminals",
+                "5": "Install new battery (connect positive cable first)",
+                "6": "Check charging current compatibility"
+              }
+            }
+          }
+        },
+        "emergency": {
+          "title": "Emergency Procedures",
+          "procedures": {
+            "contact": "In case of eye or skin contact, rinse with plenty of water.",
+            "clothing": "Remove contaminated clothing immediately.",
+            "ingestion": "If swallowed: Drink plenty of water and milk. Consult a doctor.",
+            "spill": "Spillage: Wash small spills with water.",
+            "gases": "If gases are released, ventilate the area.",
+            "spark": "Keep away from sparks and flames.",
+            "fire": "In case of fire, use appropriate fire extinguisher.",
+            "devices": "Turn off and remove electrical devices."
+          }
+        }
+      },
+      "textile": {
+        "careInstructions": "Care Instructions"
+      },
+      "layoutNotAvailable": "DPP layout not available for product type:",
+      "quickInfo": {
+        "title": "Quick Information",
+        "model": "Model",
+        "manufacturer": "Manufacturer",
+        "category": "Category"
+      },
+      "keyFeatures": {
+        "title": "Key Features"
+      },
+      "materials": {
+        "title": "Materials",
+        "table": {
+          "material": "Material",
+          "percentage": "Percentage",
+          "recyclable": "Recyclable",
+          "description": "Description",
+          "yes": "Yes",
+          "no": "No"
+        },
+        "recyclable": {
+          "yes": "Yes",
+          "no": "No"
+        }
+      },
+      "healthAndSafety": {
+        "title": "Health and Safety",
+        "measures": {
+          "0": "Always follow proper handling and storage guidelines",
+          "1": "Keep away from extreme temperatures and moisture",
+          "2": "Use appropriate personal protective equipment when handling",
+          "3": "Regular maintenance and inspection required"
+        }
+      },
+      "hazards": {
+        "title": "Hazards",
+        "health": "Health Hazard",
+        "healthDesc": "Battery acid can cause severe irritation to skin and eyes.",
+        "corrosive": "Corrosive",
+        "corrosiveDesc": "Battery acid can corrode metals and tissues.",
+        "warning": "Warning",
+        "warningDesc": "Improper use may cause serious injury.",
+        "explosive": "Explosive",
+        "explosiveDesc": "Battery gas is explosive, keep away from sparks and flames.",
+        "environmental": "Environmental Hazard",
+        "environmentalDesc": "Battery chemicals are harmful to the environment, prevent release into nature."
+      }
     },
     "list": {
       "categories": {
@@ -399,6 +488,70 @@
     },
     "details": {
       "backToProducts": "Back to Products",
+      "basicInfo": {
+        "title": "Basic Information",
+        "productCode": "Product Code",
+        "productName": "Product Name",
+        "sku": "SKU",
+        "category": "Category",
+        "status": "Status",
+        "addedDate": "Added Date",
+        "manufacturer": "Manufacturer"
+      },
+      "certifications": {
+        "title": "Certifications",
+        "table": {
+          "name": "Certificate",
+          "issuedBy": "Issued By",
+          "validUntil": "Valid Until",
+          "status": "Status",
+          "document": "Document"
+        },
+        "status": {
+          "active": "Active",
+          "valid": "Valid",
+          "expired": "Expired",
+          "pending": "Pending",
+          "unknown": "Unknown"
+        },
+        "actions": {
+          "download": "Download"
+        }
+      },
+      "qr": {
+        "title": "Product QR Code",
+        "description": "Scan this QR code to verify product authenticity and access detailed information",
+        "instructions": "Use your smartphone camera or QR code reader app to scan",
+        "downloadButton": "Download QR Code",
+        "imageAlt": "Product Verification QR Code",
+        "productQRCode": "Product QR Code"
+      },
+      "sustainability": {
+        "title": "Sustainability",
+        "description": "View product sustainability metrics",
+        "progress": "Progress",
+        "badge": "{value}% Sustainability",
+        "metrics": {
+          "waterUsage": "Water Usage",
+          "carbonFootprint": "Carbon Footprint",
+          "energyConsumption": "Energy Consumption",
+          "recycledContent": "Recycled Content",
+          "low": "Low",
+          "medium": "Medium",
+          "high": "High",
+          "carbon-footprint": "Carbon Footprint",
+          "water-usage": "Water Usage",
+          "energy-consumption": "Energy Consumption",
+          "recycled-materials": "Recycled Materials",
+          "chemical-reduction": "Chemical Reduction",
+          "biodegradability": "Biodegradability",
+          "packaging": "Packaging",
+          "waste-reduction": "Waste Reduction",
+          "chemical-usage": "Chemical Usage",
+          "renewable-energy": "Renewable Energy",
+          "water-saving": "Water Saving"
+        }
+      },
       "battery": {
         "features": {
           "0": "Advanced lithium-ion technology for optimal performance",
@@ -444,32 +597,22 @@
             }
           }
         },
-        "emergencyProcedures": {
+        "emergency": {
           "title": "Emergency Procedures",
           "procedures": {
-            "0": "In case of damage, immediately disconnect and isolate",
-            "1": "Contact emergency services if leakage or fire occurs",
-            "2": "Follow proper disposal procedures for damaged items",
-            "3": "Document and report any safety incidents",
-            "4": "In case of eye or skin contact, rinse with plenty of water",
-            "5": "Remove contaminated clothing immediately",
-            "6": "If swallowed: Drink plenty of water and milk. Consult a doctor",
-            "7": "Spillage: Wash small spills with water"
+            "contact": "In case of eye or skin contact, rinse with plenty of water.",
+            "clothing": "Remove contaminated clothing immediately.",
+            "ingestion": "If swallowed: Drink plenty of water and milk. Consult a doctor.",
+            "spill": "Spillage: Wash small spills with water.",
+            "gases": "If gases are released, ventilate the area.",
+            "spark": "Keep away from sparks and flames.",
+            "fire": "In case of fire, use appropriate fire extinguisher.",
+            "devices": "Turn off and remove electrical devices."
           }
         }
       },
       "textile": {
-        "careInstructions": {
-          "title": "Care Instructions",
-          "washing": "Washing",
-          "washingTemp": "Wash at 30 degrees",
-          "ironing": "Ironing",
-          "ironingTemp": "Iron at medium temperature",
-          "bleaching": "Bleaching",
-          "bleachingInst": "Do not bleach",
-          "drying": "Drying",
-          "dryingInst": "Lay flat to dry"
-        }
+        "careInstructions": "Care Instructions"
       },
       "layoutNotAvailable": "DPP layout not available for product type:",
       "quickInfo": {
@@ -480,7 +623,6 @@
       },
       "keyFeatures": {
         "title": "Key Features"
-          
       },
       "materials": {
         "title": "Materials",
@@ -506,40 +648,18 @@
           "3": "Regular maintenance and inspection required"
         }
       },
-      "certifications": {
-        "title": "Certifications",
-        "table": {
-          "name": "Certificate",
-          "issuedBy": "Issued By",
-          "validUntil": "Valid Until",
-          "status": "Status",
-          "document": "Document"
-        },
-        "status": {
-          "statusPending": "Pending",
-          "statusApproved": "Approved",
-          "statusRejected": "Rejected"
-        },
-        "actions": {
-          "download": "Download"
-        }
-      },
-      "sustainability": {
-        "title": "Sustainability Metrics",
-        "carbonFootprint": "Carbon Footprint",
-        "waterUsage": "Water Usage",
-        "energyEfficiency": "Energy Efficiency",
-        "recycledContent": "Recycled Content",
-        "metrics": {
-          "low": "Low",
-          "medium": "Medium",
-          "high": "High"
-        }
-      },
-      "qr": {
-        "title": "Product QR Code",
-        "description": "Scan this QR code to verify product authenticity and access detailed information",
-        "instructions": "Use your smartphone camera or QR code reader app to scan"
+      "hazards": {
+        "title": "Hazards",
+        "health": "Health Hazard",
+        "healthDesc": "Battery acid can cause severe irritation to skin and eyes.",
+        "corrosive": "Corrosive",
+        "corrosiveDesc": "Battery acid can corrode metals and tissues.",
+        "warning": "Warning",
+        "warningDesc": "Improper use may cause serious injury.",
+        "explosive": "Explosive",
+        "explosiveDesc": "Battery gas is explosive, keep away from sparks and flames.",
+        "environmental": "Environmental Hazard",
+        "environmentalDesc": "Battery chemicals are harmful to the environment, prevent release into nature."
       }
     }
   },
@@ -1213,6 +1333,18 @@
       "authentic": "Authentic Product",
       "notFound": "Product Not Found",
       "invalid": "Invalid Product ID"
+    }
+  },
+  "product": {
+    "details": {
+      "qr": {
+        "title": "Product QR Code",
+        "description": "Scan this QR code to verify product authenticity and access detailed information",
+        "instructions": "Use your smartphone camera or QR code reader app to scan",
+        "downloadButton": "Download QR Code",
+        "imageAlt": "Product Verification QR Code",
+        "productQRCode": "Product QR Code"
+      }
     }
   }
 }
