fix: Replace mock data with real data in CertificationsCard

--- a/app/i18n/locales/en.json
+++ b/app/i18n/locales/en.json
@@ -253,7 +253,8 @@
           "unknown": "Unknown"
         },
         "actions": {
-          "download": "Download"
+          "download": "Download",
+          "noDocument": "No Document"
         }
       },
       "qr": {
