--- a/app/i18n/locales/tr.json
+++ b/app/i18n/locales/tr.json
@@ -1103,7 +1103,8 @@
           "pending": "Beklemede"
         },
         "actions": {
-          "download": "İndir"
+          "download": "İndir",
+          "noDocument": "Belge Yok"
         }
       },
       "sustainability": {
