fix: Update category translation namespace in BasicInformationCard

--- a/app/i18n/locales/en.json
+++ b/app/i18n/locales/en.json
@@ -540,7 +540,9 @@
           "valid": "Valid",
           "expired": "Expired",
           "pending": "Pending",
-          "unknown": "Unknown"
+          "unknown": "Unknown",
+          "approved": "Approved",
+          "rejected": "Rejected"
         },
         "actions": {
           "download": "Download"
