--- a/app/i18n/locales/tr.json
+++ b/app/i18n/locales/tr.json
@@ -910,6 +910,9 @@
       },
       "certifications": {
         "title": "Sertifikalar",
+        "loadingCertifications": "Sertifikalar yükleniyor...",
+        "errorLoadingCertifications": "Sertifikalar yüklenirken bir hata oluştu",
+        "noCertifications": "Bu ürüne ait sertifika bulunamadı.",
         "description": "Ürün sertifikalarını görüntüleyin",
         "table": {
           "name": "Sertifika Adı",
@@ -1169,6 +1172,8 @@
       }
     },
     "list": {
+      "loginRequired": "Giriş Yapınız",
+      "loginButton": "Giriş Yap",
       "quickInfo": {
         "unknown": "Bilinmiyor"
       },
