feat: Add seller information with tax number to product details basic info card

--- a/app/i18n/locales/en.json
+++ b/app/i18n/locales/en.json
@@ -1238,7 +1238,9 @@
         "category": "Category",
         "status": "Status",
         "addedDate": "Added Date",
-        "manufacturer": "Manufacturer"
+        "manufacturer": "Manufacturer",
+        "seller": "Seller",
+        "taxNumber": "Tax Number"
       },
       "certifications": {
         "title": "Certifications",
