--- a/app/i18n/locales/tr.json
+++ b/app/i18n/locales/tr.json
@@ -1057,7 +1057,9 @@
         "category": "Kategori",
         "status": "Durum",
         "addedDate": "Eklenme Tarihi",
-        "manufacturer": "Üretici"
+        "manufacturer": "Üretici",
+        "seller": "Satıcı",
+        "taxNumber": "Vergi No"
       },
       "materials": {
         "title": "Malzemeler",
